2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: fix VPATH auto-expansion workarounds.
	* tests/suffix10.test, tests/suffix11.test, tests/suffix12.test,
	tests/suffix3.test, tests/suffix5.test, tests/suffix8.test:
	Ensure $< is not surrounded by white space, to prevent Solaris
	make from applying automatic VPATH text expansion.

	tests: fix VPATH auto-expansion workarounds.
	* tests/parallel-tests8.test, tests/suffix13.test:
	Ensure $< is not surrounded by white space, to prevent Solaris
	make from applying automatic VPATH text expansion.

2011-01-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures in yflags*.test
	* tests/yflags.test: Remove 'YACC' from the environment, so
	that it won't be erroneously picked up by `make -e'.
	* tests/yflags2.test: Likewise.

2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: avoid fn99*.test failures due to buggy AIX 5.3 cp -R.
	* tests/fn99.test, tests/fn99subdir.test: Skip if an initial
	`cp -R' of the subdir tree already fails; AIX 5.3 cp messes
	up its internal memory when copying this tree.

2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	Add comment to check-TESTS rule working around make 3.80 bug.
	* lib/am/check.am (check-TESTS): Update comment.

2011-01-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: less strict double-colon spy.test again.
	* tests/spy.test: We know BSD make doesn't invoke more than one
	double-colon rule, so no need to expose that failure.

2011-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	install-sh: avoid Tru64 sh `test' operator precedence issues.
	* lib/install-sh: Protect file names and directory components
	that consist of `=', `(', `)', or `!'.  Move protection as early
	as possible, to avoid errors such as with Tru64 sh `test -z ='.
	* tests/instsh2.test: Extend test to cover more possibilities.
	Fixes 1.12 instspc-equal-install.test failure on Tru64/OSF 5.1.
