@@ -1,3 +1,11 @@
+2011-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	tests: avoid instspc* failures due to make's whitespace trimming
+	* tests/instspc-tests.sh: Prepend './' when passing the test
+	characters, to avoid leading whitespace characters to be trimmed
+	from macros set from environment variables.  Fixes testsuite
+	failures with HP-UX and Tru64/OSF make.
+
 2011-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	tests: fix VPATH auto-expansion workarounds.
